# demographic-data-analyzer

./: README.md  demographic_data_analyzer.py  pyproject.toml  test_module.py
