[tool.poetry]
name = "demographic-data-analyzer"
version = "1.0.0"
description = "A data analyzer, which answered questions mentioned in readme.md from an open source demographic data."
authors = ["Anuj Soni <anujsoni1997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
